# rustpy

./: .bumpversion.cfg  .coveragerc  Cargo.toml  Dockerfile  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  run-tests.ps1  run-tests.sh  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst  rustpy.rst
rustpy/: __init__.py  option.py  option.pyi  primitive.pyi  result.py  result.pyi
rustpy/_rustpy/: option.py  primitive.py  result.py
rustpy/primitive/: _float.py  _float.pyi  _integer.py  _integer.pyi  bool_.py  bool_.pyi  f32.py  f64.py  i128.py  i16.py  i32.py  i64.py  i8.py  isize.py  u128.py  u16.py  u32.py  u64.py  u8.py  usize.py
src/: lib.rs
tests/: conftest.py  strategies.py  utils.py
tests/option_tests/: strategies.py  test___class_getitem__.py  test___eq__.py  test___gt__.py  test___le__.py  test___repr__.py  test_and_.py  test_and_then.py  test_expect.py  test_ge.py  test_is_none.py  test_is_some.py  test_lt.py  test_map.py  test_map_or.py  test_map_or_else.py  test_ok_or.py  test_ok_or_else.py  test_or_.py  test_or_else.py  test_subclassing.py  test_unwrap.py  test_unwrap_or.py  test_unwrap_or_else.py
tests/primitive_tests/: strategies.py  test___add__.py  test___eq__.py  test___ge__.py  test___gt__.py  test___le__.py  test___lt__.py  test___mod__.py  test___mul__.py  test___repr__.py  test___str__.py  test___sub__.py  test___truediv__.py  test_add.py  test_checked_add.py  test_checked_mul.py  test_checked_sub.py  test_div_euclid.py  test_eq.py  test_ge.py  test_le.py  test_lt.py  test_mul.py  test_rem.py  test_sub.py
tests/result_tests/: strategies.py  test___class_getitem__.py  test___eq__.py  test___ge__.py  test___le__.py  test___repr__.py  test_and_.py  test_and_then.py  test_err.py  test_expect.py  test_expect_err.py  test_gt.py  test_is_err.py  test_is_ok.py  test_lt.py  test_map.py  test_map_err.py  test_map_or.py  test_map_or_else.py  test_ok.py  test_or_.py  test_or_else.py  test_subclassing.py  test_unwrap.py  (+3 more)
(+99 files in other folders)
