[package]
name = "rustpy"
description = "Bindings of Rust programming language primitives."
license = "MIT"
repository = "https://github.com/lycantropos/rustpy"
version = "0.3.0"
edition = "2021"

[lib]
name = "rustpy"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "^0.18.2"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "^0.18.2"
