[project]
name = "rustpy"
readme = "README.md"
dynamic = ["description", "version"]

[tool.setuptools.dynamic]
description = { file = "README.md" }
version = { attr = "rustpy.__version__" }

[project.optional-dependencies]
tests = [
    "pytest>=7.2.1,<8.0",
    "hypothesis>=6.66.0,<7.0"
]


[build-system]
requires = [
    "setuptools-rust>=1.5.2,<2.0; platform_python_implementation=='CPython'",
    "setuptools"
]
build-backend = "setuptools.build_meta"
