[project]
name = "rustpy"
readme = "README.md"
dependencies = [
    "typing_extensions>=4.4.0,<5.0"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest>=7.2.1,<8.0",
    "hypothesis>=6.66.0,<7.0"
]

[build-system]
requires = [
    "setuptools-rust>=1.5.2,<2.0; platform_python_implementation=='CPython'",
    "setuptools"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--verbose -s --hypothesis-profile=default"

[tool.setuptools.dynamic]
version = { attr = "rustpy.__version__" }
